added priorities to war